--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
 
     <footer>
         <div class="footer">
-            <!-- <p class="footer-text">Lets Ba-Ba-Ba on social media together : </p> -->
             <div>
-                <a href="mailto:inferno.arindam@outlook.com" class="fa fa-google" target="_blank"></a>
+                <a href="mailto:inferno.arindam@gmail.com" class="fa fa-google" target="_blank"></a>
                 <a href="https://www.linkedin.com/in/arindam-bhattacharjee-5ab4441b9/" class="fa fa-linkedin" target="_blank"></a>
                 <a href="https://github.com/StarDustRecycled" class="fa fa-github" target="_blank"></a>
             </div>
