--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div id="fact-span" class="span-fact"></div>
         </div>
         <div>
-            <img class="img-minion " src="/images/minion.gif" alt="">
+            <img class="img-minion " src="/images/heart.gif" alt="">
         </div> 
     </div>
 
